WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305115
chromestatus.com: Misplaced clear button in search field
https://bugs.webkit.org/show_bug.cgi?id=305115
Summary
chromestatus.com: Misplaced clear button in search field
alan
Reported
2026-01-08 07:25:27 PST
<
rdar://166754216
>
Attachments
[fast-cq]Patch
(10.85 KB, patch)
2026-01-08 07:52 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-01-08 07:52:18 PST
Created
attachment 477934
[details]
[fast-cq]Patch
Lily Spiniolas
Comment 2
2026-01-08 14:10:43 PST
Comment on
attachment 477934
[details]
[fast-cq]Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=477934&action=review
> Source/WebCore/html/shadow/DataListButtonElement.h:67 > + auto* htmlElement = dynamicDowncast<WebCore::HTMLElement>(node);
We should probably use a RefPtr here
alan
Comment 3
2026-01-08 14:15:14 PST
(In reply to Lily Spiniolas from
comment #2
)
> Comment on
attachment 477934
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=477934&action=review
> > > Source/WebCore/html/shadow/DataListButtonElement.h:67 > > + auto* htmlElement = dynamicDowncast<WebCore::HTMLElement>(node); > > We should probably use a RefPtr here
We indeed should!
alan
Comment 4
2026-01-08 14:16:59 PST
actually "isDataListButtonElement" is trivial so no need to use RefPtr AFAICT.
EWS
Comment 5
2026-01-08 14:20:27 PST
Committed
305314@main
(7313736adae0): <
https://commits.webkit.org/305314@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477934
[details]
.
Alejandro G. Castro
Comment 6
2026-01-09 05:57:49 PST
This is causing a crash in the GTK tests, any idea of how to fix it, the backtrace is here:
https://build.webkit.org/results/WPE-Linux-64-bit-Release-Tests/305349@main%20(24537)/fast/forms/datalist/data-list-search-input-with-appearance-none-crash-log.txt
alan
Comment 7
2026-01-09 07:06:57 PST
This looks to be about the test itself and not the code change (WTR::UIScriptController::isShowingDataListSuggestions() crashes). I don't have a clear understanding of the current status of the GTK UIScriptController implementation, but if it's blocking EWS on GTK, I'd skip the test for now.
Alejandro G. Castro
Comment 8
2026-01-09 07:38:10 PST
Ok, thanks for the feedback!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug