chromestatus.com: Misplaced clear button in search field https://bugs.webkit.org/show_bug.cgi?id=305115 <rdar://166754216>

Reviewed by Lily Spiniolas.

Do not reserve space for list-button dropdown when page customizes the input field appearance.
This is consistent with how the magnifier (webkit-search-decoration) behaves, where appearance: none effectively hides it by collapsing its size in inline direction to 0px.

Test: fast/forms/datalist/data-list-search-input-with-appearance-none.html

* LayoutTests/fast/forms/datalist/data-list-search-input-with-appearance-none-expected.html: Added.
* LayoutTests/fast/forms/datalist/data-list-search-input-with-appearance-none.html: Added.
* Source/WebCore/css/html.css:
(input::-webkit-list-button):
* Source/WebCore/html/HTMLElement.h:
(WebCore::HTMLElement::isDataListButtonElement const):
* Source/WebCore/html/shadow/DataListButtonElement.cpp:
(WebCore::DataListButtonElement::canAdjustStyleForAppearance const):
* Source/WebCore/html/shadow/DataListButtonElement.h:
(isType):
* Source/WebCore/rendering/RenderTheme.cpp:
(WebCore::RenderTheme::autoAppearanceForElement const):
* Source/WebCore/rendering/adwaita/RenderThemeAdwaita.cpp:
(WebCore::RenderThemeAdwaita::adjustListButtonStyle const):
* Source/WebCore/rendering/cocoa/RenderThemeCocoa.mm:
(WebCore::RenderThemeCocoa::adjustListButtonStyleForVectorBasedControls const):
* Source/WebCore/rendering/mac/RenderThemeMac.mm:
(WebCore::RenderThemeMac::adjustListButtonStyle const):

Canonical link: https://commits.webkit.org/305314@main