Source/WebCore/rendering/adwaita/RenderThemeAdwaita.cpp
@@ -397,6 +397,7 @@ int RenderThemeAdwaita::sliderTickOffsetFromTrackCenter() const
 
 void RenderThemeAdwaita::adjustListButtonStyle(RenderStyle& style, const Element*) const
 {
+    style.setLogicalWidth(16_css_px);
     // Add a margin to place the button at end of the input field.
     if (style.isLeftToRightDirection())
         style.setMarginRight(-2_css_px);
